[package]
name = "solana-dapla-wasm-client"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
]
edition = "2018"
license = "MIT"

[features]
dapla_sleep = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.9"
solana-client-api = { git = "https://github.com/XX/solana-client-api" }
solana-sdk = { git = "https://github.com/solana-labs/solana" }
dapla_wasm = { git = "https://github.com/noogen-projects/dapla" }

[patch.crates-io]
ring = { git = "https://github.com/XX/ring" }