[package]
name = "solana-laplace-wasm-client"
version = "0.2.1"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
]
edition = "2021"
license = "MIT"

[features]
laplace_sleep = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "0.9"
solana-client-api = { git = "https://github.com/XX/solana-client-api" }
solana-sdk = { git = "https://github.com/XX/solana" }
laplace_wasm = { git = "https://github.com/noogen-projects/laplace" }
